k8s/gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  # addresses:
  #   - type: IPAddress
  #     value: 104.198.170.9
  #   - type: Hostname
  #     value: noodleblitz.space
  listeners:
    - name: root-http
      hostname: noodleblitz.space
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: root-https
      hostname: noodleblitz.space
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: noodleblitz-root-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: services-http
      hostname: services.noodleblitz.space
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: services-https
      hostname: services.noodleblitz.space
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: noodleblitz-services-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
# status:
#   addresses:
#   - type: IPAddress
#     value: 104.198.170.9
#   - type: Hostname
#     value: noodleblitz.space
