k8s/gateway-api/alertmanager-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager-route
  namespace: monitoring
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: nginx-gateway
  hostnames:
    - services.noodleblitz.space
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /alertmanager
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /
      backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
