k8s/gateway-api/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: nginx-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /grafana
      # filters:
      #   - type: URLRewrite
      #     urlRewrite:
      #       path:
      #         type: ReplaceFullPath
      #         replaceFullPath: /
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
